add issue wrong code execution order in closure